BUG z1087: Sidebar was overlapping editBar on small screens; so bring the editBar up
QA: In a narrow browser window, edit formatted text in the grid and make
sure you can change the font size

--- a/app/styles/screen-dataset.sass
+++ b/app/styles/screen-dataset.sass
@@ -394,9 +394,8 @@ html, body
     .sidebarOptionsContainer
       position: static
   #editBar
-    .ie7 &
-      position: relative
-      z-index: 10
+    position: relative
+    z-index: 10
 
 .aboutLoad
   height: 100px
